--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    for favorite_destination i"
+    "    for travel_destination"
    ]
   },
   {
