--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    for favorite_destination in travel_destinations.append('Madag')"
+    "    for favorite_destination in travel_destinations.append('Madagascar')\n",
+    "    "
    ]
   },
   {
