--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    for favorite_destination in travel_destinations.append('Madagascar')\n",
-    "    "
+    "    return travel_desti"
    ]
   },
   {
