--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    for favorite_destination in travel_destinations.append('Madagascar')\n",
+    "    travel_destinations.append('Madagascar')\n",
     "    return travel_destination"
    ]
   },
