--- a/index.ipynb
+++ b/index.ipynb
@@ -149,23 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-a36bd1abbe90>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-a36bd1abbe90>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    for favorite_destination in travel_destinations.append('Madagascar')\u001b[0m\n\u001b[0m                                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    travel_destinations.append('Madagascar')\n",
-    "    return travel_destination"
+    "    return travel_destinations[-1]"
    ]
   },
   {
